--- a/web-app/static/index.html
+++ b/web-app/static/index.html
@@ -63,6 +63,12 @@
 							</div>
 						</div>
 						<div class="form-group">
+							<label for="custom" class="control-label col-lg-2">custom field</label>
+							<div class="col-lg-6">
+								<input class="form-control" name='custom'></input>
+							</div>
+						</div>
+						<div class="form-group">
 							<div class="col-lg-6 col-lg-offset-2">
 								<button type='submit' class='btn btn-success'>Connect</button>
 							</div>
