Work in progress heading

--- a/web-app/static/index.html
+++ b/web-app/static/index.html
@@ -78,6 +78,7 @@
 			</div>
 			<div class="row hidden" id='submit-message'>
 				<div class="col-lg-8 col-lg-offset-2">
+					<h2>Work In Progress</h1>
 					<h3>Applying changes...</h3>
 					<p>Your device will soon be online. If connection is unsuccessful, the Access Point will be back up in a few minutes, and reloading this page will allow you to try again.</p>
 				</div>
