--- a/ui/index.html
+++ b/ui/index.html
@@ -36,7 +36,6 @@
 			<div class="container">
 				<div class="navbar-header">
 					<a class="navbar-brand"><img id="logo" height=30 src="/img/logo.svg"></img></a>
-					<a class="navbar-brand">resin.io</a>
 				</div>
 			</div>
 		</nav>
@@ -54,6 +53,12 @@
 							<label for="ssid-select" class="control-label col-lg-2">SSID</label>
 							<div class="col-lg-6">
 								<select id='ssid-select' class="form-control" name='ssid'></select>
+							</div>
+						</div>
+						<div class="form-group" id="identity-group">
+							<label for="identity" class="control-label col-lg-2">user</label>
+							<div class="col-lg-6">
+								<input class="form-control" name="identity"></input>
 							</div>
 						</div>
 						<div class="form-group">
@@ -78,7 +83,6 @@
 			</div>
 			<div class="row hidden" id='submit-message'>
 				<div class="col-lg-8 col-lg-offset-2">
-					<h2>Work In Progress</h1>
 					<h3>Applying changes...</h3>
 					<p>Your device will soon be online. If connection is unsuccessful, the Access Point will be back up in a few minutes, and reloading this page will allow you to try again.</p>
 				</div>
